# wire-server-deploy

./: .concourse.yml  .envrc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DOCS  Dockerfile  Dockerfile.ci-cache  Makefile  README.md  ansible.cfg  ci.sh  default.nix  install.md  kubespray_additional_containers.txt  mkdocs.yml  sequenceDiagram.mmd  shell.nix
ansible/: .gitignore  Makefile  README.md  admin_users.yml  ansible.cfg  backup_rabbitmq.yml  bootstrap.yml  cassandra-verify-ntp.yml  cassandra.yml  download_cli_binaries.yml  download_kubespray.yml  elasticsearch.yml  get-logs.yml  helm_etcd.yml  helm_external.yml  hetzner-single-deploy.yml  hosts.example-demo.ini  hosts.example.ini  install_jmespath.yml  inventory.yaml  iptables.yml  k8s-disable-secure-port.yml  kube-minio-static-files.yml  kubernetes-fetch-kubeconfig.yml  kubernetes-renew-certs.yml  kubernetes.yml  kubernetes_logging.yml  kubernetes_proxy.yml  logging.yml  minio.yml  ntp.yml  offline-cluster.sh  postgres-deploy.yml  postgres-install.yml  postgres.yml  postgresql-deploy.yml  provision-sft.yml  pyproject.toml  rabbitmq.yml  redis.yml  (+14 more)
ansible/db-operations/: README.md  cassandra_alter_keyspace_replication.yml  cassandra_cleanup.yml  cassandra_healthy.yml  cassandra_post_upgrade.yml  cassandra_pre_upgrade.yml  cassandra_restart.yml  cassandra_rolling_repair.yml  elasticsearch_joined.yml  elasticsearch_log4shell_mitigation.yml  elasticsearch_restart.yml  elasticsearch_stop.yml
ansible/files/: hetzner_server_libvirt_default_net.xml  hetzner_server_nftables.conf  (+5 more)
(+989 files in other folders)
