[tool.poetry]
name = "wire-server-deploy"
version = "0.1.0"
description = ""
authors = ["jschaul <jschaul@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7"
ansible = "2.8.*"
ansible-modules-hashivault = "*"
boto = "*"
dnspython = "*"
netaddr = "*"
psycopg2-binary = "*"
boto3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
