[tool.poetry]
name = "wire-server-deploy"
version = "0.1.0"
description = ""
authors = ["jschaul <jschaul@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7 || >=3.5"
ansible = "2.7.*"
ansible-modules-hashivault = "*"
boto = "*"
dnspython = "*"
netaddr = ">= 0.7"
psycopg2-binary = "*"
boto3 = "*"
jinja2 = ">= 2.10.1"
pbr = "^5.2"
hvac = ">= 0.8"
jmespath = ">= 0.9.4"
"ruamel.yaml" = ">= 0.15.96"
PyYAML = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
